# MiniChat

./: CMakeLists.txt  README.md  READ_ME.txt
MiniChatServer/: CMakeLists.txt
MiniChatServer/Source/: main.cpp
Network/: CMakeLists.txt
Network/MiniChatClient/: CMakeLists.txt
Network/MiniChatClient/Header/: clientFunc.h
Network/MiniChatClient/Source/: client.cpp  clientFunc.cpp  main.cpp
Network/MiniChatServer/Header/: chatServer.h
Network/MiniChatServer/Source/: chatServer.cpp  main.cpp
Network/NetworkLibrary/: CMakeLists.txt
Network/NetworkLibrary/Private/: errorHandler.h  sckt.h
Network/NetworkLibrary/Public/Network/: Network.h  client.h  server.h
Network/NetworkLibrary/Source/: Network.cpp  Platform.cpp  client.cpp  sckt.cpp  server.cpp
NetworkLibrary/Public/Network/: server.h
NetworkLibrary/Source/: client.cpp  errorHandler.cpp  server.cpp
